--- a/resources/assets/sass/picker.scss
+++ b/resources/assets/sass/picker.scss
@@ -1,6 +1,6 @@
 #picker-container{
 
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 
     .picker-actions{
         margin-top: 20px;
